
include $(top_srcdir)/common.am


ASN_SOURCE = bionet-protocol-0.asn1


ASN_MODULE_SOURCES=	\
	ResourceFlavor.c	\
	ResourceDataType.c	\
	Value.c	\
	Datapoint.c	\
	Resource.c	\
	Node.c	\
	ResourceMetadata.c \
	ResourceDatapoints.c \
	C2H-Message.c   \
	H2C-Message.c

# FIXME: autoreconf doesnt work if this variable is called ASN_MODULE_HEADS
ASN_MODULE_HEADS=	\
	ResourceFlavor.h	\
	ResourceDataType.h	\
	Value.h	\
	Datapoint.h	\
	Resource.h	\
	Node.h	\
	ResourceMetadata.h \
	ResourceDatapoints.h \
	C2H-Message.h   \
	H2C-Message.h

ASN_MODULE_HEADS+=BOOLEAN.h
ASN_MODULE_SOURCES+=BOOLEAN.c
ASN_MODULE_HEADS+=INTEGER.h
ASN_MODULE_HEADS+=NativeEnumerated.h
ASN_MODULE_HEADS+=GeneralizedTime.h
ASN_MODULE_SOURCES+=GeneralizedTime.c
ASN_MODULE_SOURCES+=INTEGER.c
ASN_MODULE_SOURCES+=NativeEnumerated.c
ASN_MODULE_HEADS+=NativeInteger.h
ASN_MODULE_SOURCES+=NativeInteger.c
ASN_MODULE_HEADS+=NativeReal.h
ASN_MODULE_SOURCES+=NativeReal.c
ASN_MODULE_HEADS+=REAL.h
ASN_MODULE_HEADS+=PrintableString.h
ASN_MODULE_SOURCES+=PrintableString.c
ASN_MODULE_SOURCES+=REAL.c
ASN_MODULE_HEADS+=asn_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=asn_SEQUENCE_OF.c
ASN_MODULE_HEADS+=asn_SET_OF.h
ASN_MODULE_SOURCES+=asn_SET_OF.c
ASN_MODULE_HEADS+=constr_CHOICE.h
ASN_MODULE_SOURCES+=constr_CHOICE.c
ASN_MODULE_HEADS+=constr_SEQUENCE.h
ASN_MODULE_SOURCES+=constr_SEQUENCE.c
ASN_MODULE_HEADS+=constr_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=constr_SEQUENCE_OF.c
ASN_MODULE_HEADS+=constr_SET_OF.h
ASN_MODULE_SOURCES+=constr_SET_OF.c
ASN_MODULE_HEADS+=asn_application.h
ASN_MODULE_HEADS+=asn_system.h
ASN_MODULE_HEADS+=asn_codecs.h
ASN_MODULE_HEADS+=asn_internal.h
ASN_MODULE_HEADS+=OCTET_STRING.h
ASN_MODULE_SOURCES+=OCTET_STRING.c
ASN_MODULE_HEADS+=BIT_STRING.h
ASN_MODULE_SOURCES+=BIT_STRING.c
ASN_MODULE_SOURCES+=asn_codecs_prim.c
ASN_MODULE_HEADS+=asn_codecs_prim.h
ASN_MODULE_HEADS+=ber_tlv_length.h
ASN_MODULE_SOURCES+=ber_tlv_length.c
ASN_MODULE_HEADS+=ber_tlv_tag.h
ASN_MODULE_SOURCES+=ber_tlv_tag.c
ASN_MODULE_HEADS+=ber_decoder.h
ASN_MODULE_SOURCES+=ber_decoder.c
ASN_MODULE_HEADS+=der_encoder.h
ASN_MODULE_SOURCES+=der_encoder.c
ASN_MODULE_HEADS+=constr_TYPE.h
ASN_MODULE_SOURCES+=constr_TYPE.c
ASN_MODULE_HEADS+=constraints.h
ASN_MODULE_SOURCES+=constraints.c
ASN_MODULE_HEADS+=xer_support.h
ASN_MODULE_SOURCES+=xer_support.c
ASN_MODULE_HEADS+=xer_decoder.h
ASN_MODULE_SOURCES+=xer_decoder.c
ASN_MODULE_HEADS+=xer_encoder.h
ASN_MODULE_SOURCES+=xer_encoder.c
ASN_MODULE_HEADS+=per_support.h
ASN_MODULE_SOURCES+=per_support.c
ASN_MODULE_HEADS+=per_decoder.h
ASN_MODULE_SOURCES+=per_decoder.c
ASN_MODULE_HEADS+=per_encoder.h
ASN_MODULE_SOURCES+=per_encoder.c


SRC = $(ASN_MODULE_SOURCES) bionet-asn-helpers.c

lib_LTLIBRARIES=libbionet-asn.la
libbionet_asn_la_SOURCES=$(SRC) $(ASN_MODULE_HEADS)

libbionet_asn_la_CFLAGS = $(AM_CFLAGS) $(GLIB20_CFLAGS) -I../util

libbionet_asn_la_LIBADD = $(AM_LDADD)


# FIXME: automakify this
test-asn: converter-sample.c pdu_collection.c $(SRC)
	$(CC) $(CFLAGS) -I. -DASN_PDU_COLLECTION -DPDU=H2C_Message -o test-asn-h2c $(LDFLAGS) $(LDLIBS) $^ -lm
	$(CC) $(CFLAGS) -I. -DASN_PDU_COLLECTION -DPDU=C2H_Message -o test-asn-c2h $(LDFLAGS) $(LDLIBS) $^ -lm


# 
# this rule removes all the autogenerated code from the asn1c compiler
#

clean-asn1: clean
	rm -f converter-sample.c pdu_collection.c ${ASN_MODULE_SOURCES} ${ASN_MODULE_HEADS}


# 
# this rule re-runs the asn1c compiler to re-produce all the ASN.1 C code,
# then applies our local patches
#

rebuild-asn1:
	asn1c -Werror -fnative-types -fskeletons-copy -pdu=auto -gen-PER $(ASN_SOURCE)
	patch --quiet -p4 < local-patch

